--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -2289,7 +2289,7 @@ This clears the Z offsets and returns the torch to the starting position.
 
 Cutting thick materials can be problematic in that the large amount of molten metal caused by piercing can shorten the life of consumables and also may cause a puddle high enough that the torch may hit the puddle while moving to cut height.
 
-The are two functions built into QtPlasmaC to help alleviate these issues.
+There are several functions built into QtPlasmaC to help alleviate these issues, Pierce Only and Puddle Jump described in this section as well as Wiggle Pierce and Ramp Pierce described in the <<plasma:moving-pierce,Moving Pierce>> section.
 
 [[plasma:pierce-only]]
 .*Pierce Only*
@@ -4088,6 +4088,7 @@ sudo apt install python3-serial
 
 A typical <<plasma:rs485_connections,connection diagram>> is shown in the appendix of this document as well as confirmed working interfaces.
 
+[[plasma:moving-pierce]]
 === Moving Pierce
 
 A moving pierce allows the torch to move during the pierce delay period.  This has an advantage in that it allows for thicker materials to be pierced than can be achieved with a stationary pierce. It also supports longer consumable life by allowing a style of motion that helps prevent molten material being sprayed up into the torch nozzle.
@@ -4095,7 +4096,10 @@ A moving pierce allows the torch to move during the pierce delay period.  This h
 Through the use of M159 a moving pierce can be configured.
 
 The syntax for the M159 command is as follows: +
+[source,{ini}]
+----
 M159 P<action code> Q<value>
+----
 
 [width="100%",cols="1,5,1",options="header"]
 |===
@@ -4116,16 +4120,16 @@ The available moving pierce models are as follows.
 
 ==== Wiggle Pierce
 
-The model supported is the same as that created by Sheetcam's wiggle pierce.  Given a straight leadin to the main cut the wiggle pierce is expected to move back and forth for some distance along the leadin.  Strictly speaking this straigh movement is arbitrary. Technically any X/Y motion is availble during the pierce delay and it is up the CAM tooling or the user to program.
+The model supported is the same as that created by Sheetcam's wiggle pierce.  Given a straight leadin to the main cut the wiggle pierce is expected to move back and forth for some distance along the leadin.  Strictly speaking this straight movement is arbitrary. Technically any X/Y motion is available during the pierce delay and it is up the CAM tooling or the user to program.
 
-The constraint is that this motion is expected to be completed during the pierce delay value.  If not then QTPlasmac will transition to normal cut height on completion of pierce delay and potentially before the wiggle motion is completed.
+The constraint is that this motion is expected to be completed during the pierce delay value.  If not then the torch will transition to normal cut height on completion of pierce delay and potentially before the wiggle motion is completed.
 
 Therefore the size (i.e. distance of travel) of the wiggle and the feedrate need to be considered in calculating the pierce delay. OR the size of the wiggle constrained based on feedrate and pierce delay.
 
 For example lets us assume the following:
 
 * A feed rate of 1080mm/min (i.e. 18mm/sec)
-* A wiggle movement of 4mm for 3 osciliation
+* A wiggle movement of 4mm for 3 oscillation
 
 This means that the size of the wiggle is 4 x 3 = 12mm.  At the 18mm/sec feedrate this tells us that the pierce delay needs to be approx 0.7 seconds to support the wiggle distance at pierce height.
 
@@ -4138,9 +4142,9 @@ To reset back to standard behaviour issue: +
 
 ==== Ramp Pierce
 
-A ramping pierce combines a range of paramters so as to generate a sloped trough that causes the molten material to be evacuated. The resulting evacutation of material is sometimes likened to a rooster tail as it is very directional.  Careful consideration of the leadin can allow evactuation of material in a safe direction for workers and machine components.
+A ramping pierce combines a range of parameters so as to generate a sloped trough that causes the molten material to be evacuated. The resulting evacuation of material is sometimes likened to a rooster tail as it is very directional.  Careful consideration of the leadin can allow evacuation of material in a safe direction for workers and machine components.
 
-As all the elements combine to drive the shape of the ramping pierce it is key that all these elements are carefully considered when designing the ramp pierce and the parameters that set it. In evitably there will need to be experimentation to build recipes that work for your plasma source and the materials you cut.
+As all the elements combine to drive the shape of the ramping pierce it is key that all these elements are carefully considered when designing the ramp pierce and the parameters that set it. Inevitably there will need to be experimentation to build recipes that work for your plasma source and the materials you cut.
 
 Consider:
 
@@ -4169,7 +4173,7 @@ m159 p607 q245
 m159 p608 q3
 ----
 
-This code shows us the following imformation in order:
+This code shows us the following information in order:
 
 . Material magic comment
 ** Pierce Height is 4mm
@@ -4191,11 +4195,11 @@ It starts traveling at 980mm/min for 5mm.  Which consumes 0.3 seconds. Torch hei
 
 Torch speed is now set to 245mm/min for a distance of 3mm. In parallel torch height will remain at 4mm for another 0.2 seconds (0.3s + 0.2s = 0.5s. Being the 50% of pierce delay).
 
-Then the the torch will begin decending to 2.5mm for the remaining 0.5 seconds of pierce delay. The creep distance takes roughly 0.7 seconds to complete. This means creep speed continues slightly past the point pierce end height is achieved by about 0.2 seconds.
+Then the the torch will begin descending to 2.5mm for the remaining 0.5 seconds of pierce delay. The creep distance takes roughly 0.7 seconds to complete. This means creep speed continues slightly past the point pierce end height is achieved by about 0.2 seconds.
 
 Then the speed is set to the cutting feed rate of 490mm/min. We have still not transitioned to cut height at this point. There is a 1 second delay from the end of the pierce delay period.  If you do the math you will see we have approximately 0.8 seconds before the final transition to the target cut height.
 
-From the above text the user should be able to see that quite a bit of configuration and subtlty can be achieved through careful use of different combination of parameters.
+From the above text the user should be able to see that quite a bit of configuration and subtlety can be achieved through careful use of different combination of parameters.
 
 == Internationalisation
 
