--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -3778,7 +3778,7 @@ The following HAL bit pins are always created. The HAL pin has the identical beh
 |Use a laser to set an origin with or without rotation m|qtplasmac.ext_laser_touchoff |LASER
 |Toggle qtplasmac.laser_on pin m|qtplasmac.ext_laser_toggle |N/A
 |Run/Pause/Resume the loaded G-code program m|qtplasmac.ext_run_pause |CYCLE START, CYCLE PAUSE, CYCLE RESUME in sequence
-|Torch height override plus m|qtplasmac.ext_height_ovr_plus |OVERRIDE + 
+|Torch height override plus m|qtplasmac.ext_height_ovr_plus |OVERRIDE +
 |Torch height override minus m|qtplasmac.ext_height_ovr_minus |OVERRIDE -
 |Torch height override reset m|qtplasmac.ext_height_ovr_reset |OVERRIDE RESET TO 0.00
 |Torch height override scale m|qtplasmac.ext_height_ovr_scale |N/A
@@ -4091,71 +4091,84 @@ A typical <<plasma:rs485_connections,connection diagram>> is shown in the append
 [[plasma:moving-pierce]]
 === Moving Pierce
 
-A moving pierce allows the torch to move during the pierce delay period.  This has an advantage in that it allows for thicker materials to be pierced than can be achieved with a stationary pierce. It also supports longer consumable life by allowing a style of motion that helps prevent molten material being sprayed up into the torch nozzle.
+A moving pierce allows the torch to move during the pierce delay period. This has an advantage in that it allows for thicker materials to be pierced than can be achieved with a stationary pierce. It may also support longer consumable life by allowing a style of motion that helps prevent molten material being sprayed up into the torch nozzle.
 
 Through the use of M159 a moving pierce can be configured.
 
 The syntax for the M159 command is as follows: +
 [source,{ngc}]
 ----
-M159 P<action code> Q<value>
+M159 Pn Qn
 ----
 
-[width="100%",cols="1,5,1",options="header"]
+[width="100%",cols="1,1,5,1",options="header"]
 |===
-|Action Code (P)|Effect                                                                      |Value (Q)
-|601            |Pierce Type: 0=Normal, 1=Wiggle, 2=Ramp                                     |0,1,2
-|602            |Pierce Motion Delay: Delay in Z motion to Pierce End Height expressed as a % of Pierce Delay |Integer 0 to 100
-|603            |Pierce End Height: Target pierce height at end of Pierce Delay. Normally lower than Pierce Height. Expressed in machine units |Float
-|604            |Cut Height Delay: At the end of transition to Pierce End Height wait x secs before transition to Cut Height |Float
-|605            |Gouge Speed: Speed in machine units/min |Float
-|606            |Gouge Distance: Distance of gouge to travel in machine units |Float
-|607            |Creep Speed: Speed in machine units. Creep takes effect after gouge has finished |Float
-|608            |Creep Distance: Distance of creep to travel in machine units |Float
-|609            |Reset to standard behaviour.  i.e. Pierce type = 0| Not Required
+|Action Code (P)|Action|Description |Value (Q)
+|601 |Pierce Type |0=Normal, 1=Wiggle, 2=Ramp |0,1,2
+|602 |Pierce Motion Delay |Delay before Z motion starts to Pierce End Height. +
+Expressed as a % of Pierce Delay. |Integer 0 to 100
+|603 |Pierce End Height |Target pierce height at end of Pierce Delay. Normally lower than Pierce Height. +
+Expressed in machine units. |Float
+|604 |Cut Height Delay |Delay at the end of transition to Pierce End Height before transition to Cut Height. +
+Expressed in seconds. |Float
+|605 |Gouge Speed |Velocity of gouge. +
+Expresssed in machine units/min. |Float
+|606 |Gouge Distance |Length of gouge. +
+Expressed in machine units. |Float
+|607 |Creep Speed |Velocity of creep which takes effect after gouge has finished. +
+Expressed in machine units.|Float
+|608 |Creep Distance |Length of creep. +
+Expressed in machine units. |Float
+|609 |Reset |Resets the values for action codes 601-608 back to 0, returning to default behaviour. |Not Required
 |===
 
 
-The available moving pierce models are as follows.
+The available moving pierce models are as follows:
 
 ==== Wiggle Pierce
 
-The model supported is the same as that created by Sheetcam's wiggle pierce.  Given a straight leadin to the main cut the wiggle pierce is expected to move back and forth for some distance along the leadin.  Strictly speaking this straight movement is arbitrary. Technically any X/Y motion is available during the pierce delay and it is up the CAM tooling or the user to program.
+The model supported is the same as that created by Sheetcam's wiggle pierce. Given a straight leadin to the main cut the wiggle pierce is expected to move back and forth for some distance along the leadin. Strictly speaking this straight movement is arbitrary. Technically any X/Y motion is available during the pierce delay and it is up the CAM tooling or the user to program.
 
-The constraint is that this motion is expected to be completed during the pierce delay value.  If not then the torch will transition to normal cut height on completion of pierce delay and potentially before the wiggle motion is completed.
+The constraint is that this motion is expected to be completed during the pierce delay value. If not then the torch will transition to normal cut height on completion of pierce delay and potentially before the wiggle motion is completed.
 
-Therefore the size (i.e. distance of travel) of the wiggle and the feedrate need to be considered in calculating the pierce delay. OR the size of the wiggle constrained based on feedrate and pierce delay.
+Therefore the length of the wiggle and the feedrate need to be considered in calculating the pierce delay, or the size of the wiggle constrained based on feedrate and pierce delay.
 
-For example lets us assume the following:
+For example:
 
-* A feed rate of 1080mm/min (i.e. 18mm/sec)
+* A feed rate of 1080 mm/m (18 mm/s)
 * A wiggle movement of 4mm for 3 oscillation
 
-This means that the size of the wiggle is 4 x 3 = 12mm.  At the 18mm/sec feedrate this tells us that the pierce delay needs to be approx 0.7 seconds to support the wiggle distance at pierce height.
+This means that the length of the wiggle is 4 x 3 = 12mm. At the 18 mm/s feedrate, the pierce delay needs to be approx 0.7 seconds to support the wiggle distance at pierce height.
 
-The only code needed inform plasmac (the underlying plasma controller to QTPlasmac) is: +
- M159 P601 Q1
+The G-code needed invoke this behaviour is: +
+[source,{ngc}]
+----
+M159 P601 Q1
+----
 
-To reset back to standard behaviour issue: +
- M159 P609
+The  G-code needed to reset to standard behaviour is: +
+[source,{ngc}]
+----
+M159 P609
+----
 
 
 ==== Ramp Pierce
 
-A ramping pierce combines a range of parameters so as to generate a sloped trough that causes the molten material to be evacuated. The resulting evacuation of material is sometimes likened to a rooster tail as it is very directional.  Careful consideration of the leadin can allow evacuation of material in a safe direction for workers and machine components.
+A ramping pierce combines a range of parameters so as to generate a sloped trough that causes the molten material to be evacuated. The resulting evacuation of material is sometimes likened to a "rooster tail" as it is very directional. Careful consideration of the leadin can allow evacuation of material in a safe direction for workers and machine components.
 
-As all the elements combine to drive the shape of the ramping pierce it is key that all these elements are carefully considered when designing the ramp pierce and the parameters that set it. Inevitably there will need to be experimentation to build recipes that work for your plasma source and the materials you cut.
+As the elements combine to drive the shape of the ramping pierce it is key that all of these elements are carefully considered when designing the ramp pierce and the parameters that set it. Inevitably there will need to be experimentation to build recipes that work with the plasma power source being used in conjunction with the material to be cut.
 
-Consider:
+Items to consider:
 
-* The gouge and creep speeds and distances in relation to the sum of Pierce Delay from the material and Cut Height Delay
-* Pierce height from the material and end pierce height in relation to pierce delay from the material and the speeds in effect over the various distances during the pierce delay time
-* Your plasma source's manufacturer cut charts for the material type and thickness
+. The gouge and creep speeds and distances in relation to the sum of Pierce Delay from the material and the Cut Height Delay action.
+. Pierce height from the material and the End Pierce Height action in relation to Pierce Delay from the material and the speeds in effect over the various distances during the Pierce Delay time.
+. The plasma source manufacturer's cut charts for the material type and thickness.
 
 
 image::images/qtplasmac_ramp_pierce_chart.png[width=1032, align="center"]
 
-As with wiggle pierce it is up the CAM tooling or the user to program for a ramping pierce.
+As with wiggle pierce it is up the CAM tooling or the user to program a ramping pierce.
 
 Below is a sample of code to setup a ramp pierce: +
 
@@ -4163,43 +4176,45 @@ Below is a sample of code to setup a ramp pierce: +
 ----
 (o=0,kw=2, ph=4, pd=1, ch=1.5, fr=490, th=1, cv=99, pe=0.3, jh=0, jd=0)
 
-m159 p601 q2
-m159 p602 q50
-m159 p603 q2.5
-m159 p604 q1
-m159 p605 q980
-m159 p606 q5
-m159 p607 q245
-m159 p608 q3
+M159 P601 Q2
+M159 P602 Q50
+M159 P603 Q2.5
+M159 P604 Q1
+M159 P605 Q980
+M159 P606 Q5
+M159 P607 Q245
+M159 P608 Q3
 ----
 
 This code shows us the following information in order:
 
-. Material magic comment
-** Pierce Height is 4mm
-** Pierce delays is 1 second
-** Cut height is 1.5mm
-** Feed rate is 490mm/min
-. Mode is set to 2 which is ramp pierce
-. Pierce motion delay is 50% of pierce delay, 0.5 seconds
-. Pierce end height is 2.5mm
-. Cut height delay is 1 second
-. Gouge speed is 980mm/min
-. Gouge distance is 5mm
-. Creep speed is 245mm/min
-. Creep distance is 3mm
+. Material magic comment.
+** Pierce Height is 4 mm.
+** Pierce Delay is 1 second.
+** Cut Height is 1.5 mm.
+** Cut Feed Rate is 490 mm/m.
+. Mode is set to 2 which is ramp pierce.
+. Pierce Motion Delay is 50% of Pierce Delay (0.5 seconds).
+. Pierce End Height is 2.5 mm
+. Cut Height Delay is 1 second.
+. Gouge Speed is 980 mm/m.
+. Gouge Distance is 5 mm
+. Creep Speed is 245 mm/m.
+. Creep Distance is 3 mm.
 
-With this information we know that the torch will start at 4mm from work material.
+With this information the following behavior can be described:
 
-It starts traveling at 980mm/min for 5mm.  Which consumes 0.3 seconds. Torch height is still at 4mm at this point.
+It is important to note that accelerations and decelerations are omitted from the following calculations.
 
-Torch speed is now set to 245mm/min for a distance of 3mm. In parallel torch height will remain at 4mm for another 0.2 seconds (0.3s + 0.2s = 0.5s. Being the 50% of pierce delay).
+The torch will start at Pierce Height (4 mm from the material) and start traveling at a Gouge Speed of 980 mm/m (16.3 mm/s) for a Gouge Distance of 5 mm which will consume 0.3 seconds (5 mm / 16.3 mm/s = 0.3 s) of the 0.5 s Pierce Motion Delay.
 
-Then the the torch will begin descending to 2.5mm for the remaining 0.5 seconds of pierce delay. The creep distance takes roughly 0.7 seconds to complete. This means creep speed continues slightly past the point pierce end height is achieved by about 0.2 seconds.
+When the Gouge Distance is reached, the torch speed is set to a Creep Speed of 245 mm/m (4 mm/s) for a Creep Distance of 3 mm. The Creep Distance will take roughly 0.7 seconds to complete (3 mm / 4 mm/s = 0.7 s).
 
-Then the speed is set to the cutting feed rate of 490mm/min. We have still not transitioned to cut height at this point. There is a 1 second delay from the end of the pierce delay period.  If you do the math you will see we have approximately 0.8 seconds before the final transition to the target cut height.
+The torch height will remain at 4 mm for another 0.2 seconds (0.5 s (Pierce Motion Delay) - 0.3 s (Gouge Distance at Gouge Speed) = 0.2 s) after which the torch will begin descending to a Pierce End Height of 2.5 mm over the remaining 0.5 seconds of the material's Pierce Delay. Since there are 0.5 seconds of the material's Pierce Delay remaining, as well as 0.5 seconds left at Creep Speed, the Creep Distance will be covered at the same time the Pierce End Height is reached.
 
-From the above text the user should be able to see that quite a bit of configuration and subtlety can be achieved through careful use of different combination of parameters.
+When the Creep Distance has been reached, the torch speed will be set to the material's Cut Feed Rate of 490 mm/m. Since there is a 1 second Cut Height Delay that started at the end of the material's Pierce Delay the transition to a Cut Height of 1.5 mm will occur after the remaining 1 second Cut Height Delay has expired.
+
+The above text should demonstrate that there is quite a bit of configuration and subtlety can be achieved through experimentation and the careful use of different parameter combinations.
 
 == Internationalisation
 
