--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -981,7 +981,9 @@ This value displayed below MOVE represents the Kerf Width of the currently selec
 |CLEAR  |This button will clear the currently opened program. +
 If a file is open, the default material will be selected. +
 If no file is open, the <<sub:qt-preview-views,preview>> will be reset to a top down full table view. +
-The torch (T0) will be selected if it was not the active tool.
+The torch (T0) will be selected if it was not the active tool. +
+Previous error messages, and the error status will be cleared. +
+Cut type will be set to NORMAL CUT.
 |OPEN   |This button will open a FILE OPEN panel over the PREVIEW WINDOW.
 |RELOAD |This button will reload the currently loaded G-code File.
 |===
