--- a/docs/src/config/python-interface.adoc
+++ b/docs/src/config/python-interface.adoc
@@ -98,13 +98,13 @@ INI file values>> for an example.
   current value of the analog input pins.
 
 *angular_units*:: '(returns float)' -
-machine angular units per deg, reflects [TRAJ]ANGULAR_UNITS INI value.
+  machine angular units per deg, reflects [TRAJ]ANGULAR_UNITS INI value.
 
 *aout*:: '(returns tuple of floats)' -
   current value of the analog output pins.
 
-*axes*:: '(returns integer)' -
-  number of axes. Derived from [TRAJ]COORDINATES INI value.
+*axes*:: Removed from version 2.9
+  use axis_mask.bit_count() to get the number of axes configured
 
 *axis*:: '(returns tuple of dicts)' -
   reflecting current axis values. See
