--- a/docs/src/config/python-interface.adoc
+++ b/docs/src/config/python-interface.adoc
@@ -103,7 +103,7 @@ machine angular units per deg, reflects [TRAJ]ANGULAR_UNITS INI value.
 *aout*:: '(returns tuple of floats)' -
   current value of the analog output pins.
 
-*axes*:: Removed from version 2.9
+*axes*:: Removed since version 2.9
   use axis_mask.bit_count() to get the number of axes configured
 
 *axis*:: '(returns tuple of dicts)' -
