--- a/docs/src/gcode/coordinates.adoc
+++ b/docs/src/gcode/coordinates.adoc
@@ -239,7 +239,7 @@ not explicitly zeroed will retain the previous offset.
 G92 is the most misunderstood and cleverest command
 programmable with LinuxCNC. The way it works has changed a bit
 between the first versions and the current one. These changes have
-doubt baffled many users. They should be seen as
+baffled many users. They should be seen as
 a command producing a temporary offset, which applies to all
 the other offsets.
 
@@ -293,25 +293,22 @@ coordinates X0, Y0, and Z0, without motion.  G92 *does not* work from
 absolute machine coordinates.  It works from *current location*.
 
 'G92' also works from current location as modified by any other
-offsets that are in effect when the 'G92' command is invoked. While
-testing for differences between work offsets and actual offsets it was
-found that a 'G54' offset could cancel out a 'G92' and thus give the
-appearance that no offsets were in effect. However, the 'G92' was
-still in effect for all coordinates and did produce expected work
-offsets for the other coordinate systems.
+offsets that are in effect when the 'G92' command is invoked.
 
-By default, 'G92' offsets are restored after the machine is started.
+By default, 'G92' offsets values are stored in parameters [5211..5219] 
+on 'M2'/'M30' and are saved to the 'PARAMETER_FILE' on shutdowm. These
+offset values can be restored with 'G92.3' in another program or after 
+a restart.
 Programmers that wish for Fanuc behavior, where 'G92' offsets are
-cleared at machine start and after a reset or program end, may disable
-'G92' persistence by setting 'DISABLE_G92_PERSISTENCE = 1' in the
-'[RS274NGC]' section of the INI file.
+cleared at machine start, after 'M2'/'M30' may disable 'G92' persistence 
+by setting 'DISABLE_G92_PERSISTENCE = 1' in the '[RS274NGC]' section
+of the INI file.
 
 [NOTE]
-It is good practice to clear the 'G92' offsets at the end of their use
-with 'G92.1' or 'G92.2'. When starting up LinuxCNC with 'G92'
-persistence enabled (the default), any offsets in the 'G92' variables
-will be applied when an axis is homed.  See
-<<sec:g92-persistence-cautions,G92 Persistence Cautions>> below.
+Beware that a 'G92' offset in effect during a program abort may result 
+in unintended offsets when the next program is run.
+It is good practice to handle program aborts using the 'ON_ABORT_COMMAND'
+entry in the [RS274NGC] section of the INI file. 
 
 === Setting G92 Values
 
@@ -338,64 +335,20 @@ zero. A 'G92 X2' will set an offset of 0.0000 and the displayed position
 will not change. A 'G92 X5.0000' will set an offset of 3.0000 so that
 the current displayed position becomes 5.0000.
 
-[[sec:g92-persistence-cautions]]
-=== G92 Persistence Cautions
-
-By default, the values of a 'G92' offset will be saved in the VAR file
-and be restored after a machine reset or startup.
-
-The G92 parameters are:
-
-* 5210 - Enable/disable flag (1.0/0.0)
-* 5211 - X Axis Offset
-* 5212 - Y Axis Offset
-* 5213 - Z Axis Offset
-* 5214 - A Axis Offset
-* 5215 - B Axis Offset
-* 5216 - C Axis Offset
-* 5217 - U Axis Offset
-* 5218 - V Axis Offset
-* 5219 - W Axis Offset
-
-where 5210 is the 'G92' enable flag (1 for enabled, 0 for disabled)
-and 5211 to 5219 are the axis offsets. If you are seeing unexpected
-positions as the result of a commanded move, as a result of storing an
-offset in a previous program and not clearing them at the end then
-issue a G92.1 in the MDI window to clear the stored offsets.
-
-If G92 values exist in the VAR file when LinuxCNC starts up, the G92
-values in the var file will be applied to the values of the current
-location of each axis. If this is home position and home position is
-set as machine zero everything will be correct. Once home has been
-established using real machine switches, or by moving each axis to a
-known home position and issuing an axis home command, any G92 offsets
-will be applied. If you have a G92 X1 in effect when you home the X axis
-the DRO will read 'X: 1.000' instead of the expected 'X: 0.000' because
-the G92 was applied to the machine origin. If you issue a G92.1 and the
-DRO now reads all zeros then you had a G92 offset in effect when you
-last ran LinuxCNC.
-
-Unless your intention is to use the same G92 offsets in the next
-program, the best practice is to issue a G92.1 at the end of any G
-code files where you use G92 offsets.
-
-When a program is aborted during processing that has 'G92' offsets in
-effect a startup will cause them to become active again.  As a
-safeguard, always have your preamble to set the environment as you
-expect it.  Additionally, 'G92' persistence may be disabled by setting
-'DISABLE_G92_PERSISTENCE = 1' in the '[RS274NGC]' section of the
-INI file.
-
 [[sec:g92-g52-interaction-cautions]]
 === G92 and G52 Interaction Cautions
 
 'G52' and 'G92' share the same offset registers. Unless 'G92'
 persistence is disabled in the INI file (see
 <<sec:g92-commands,G92 Commands>>),
-'G52' offsets will also persist after machine reset,
-'M02' or 'M30'.  Beware that a 'G52' offset in effect during a program
-abort may result in unintended offsets when the next program is run.
-See <<sec:g92-persistence-cautions,G92 Persistence Cautions>> above.
+'G52' offset values will also persist in parameters [5211..5219] after 
+'M2'/'M30', machine reset or config restart.
+
+[NOTE]
+Beware that a 'G52' offset in effect during a program abort may result 
+in unintended offsets when the next program is run.
+It is good practice to handle program aborts using the 'ON_ABORT_COMMAND'
+entry in the [RS274NGC] section of the INI file. 
 
 == Sample Programs Using Offsets
 
@@ -471,11 +424,7 @@ program. You'll see that it is running in each case at Z0. If the mill
 were at the zero position, a G92 Z1.0000 issued at the head of the
 program would shift everything an inch. You might also shift the
 whole pattern around in the XY plane by adding some X and Y offsets
-with G92. If you do this you should add a G92.1 command just before the
-M2 that ends the program. If you do not, other programs that you might
-run after this one will also use that G92 offset. Furthermore it would
-save the G92 values when you shut down the LinuxCNC and they will be
-recalled when you start up again.
+with G92.
 
 === Sample Program Using G52 Offsets
 
