--- a/docs/src/hal/components.adoc
+++ b/docs/src/hal/components.adoc
@@ -203,7 +203,7 @@ Smart-serial remote parameters can now be set in the HAL file in the normal way.
 | link:../man/man9/counter.9.html[counter]   |Counts input pulses (deprecated). Use the <<sec:encoder,encoder>> component. | |
 | link:../man/man9/ddt.9.html[ddt]           |Computes the derivative of the input function. ||
 | link:../man/man9/deadzone.9.html[deadzone] |Returns the center if within the threshold. ||
-| link:../man/man9/div2.9.html[deadzone]     |Quotient of two floating point inputs. ||
+| link:../man/man9/div2.9.html[div2]         |Quotient of two floating point inputs. ||
 | link:../man/man9/hypot.9.html[hypot]       |Three-input hypotenuse (Euclidean distance) calculator. ||
 | link:../man/man9/ilowpass.9.html[ilowpass] |Low-pass filter with integer inputs and outputs ||
 | link:../man/man9/integ.9.html[integ]       |Integrator ||
