--- a/src/emc/usr_intf/gmoccapy/release_notes.txt
+++ b/src/emc/usr_intf/gmoccapy/release_notes.txt
@@ -1,5 +1,7 @@
 ver 3.4.8
  - re-ordered settings pages to have all appearance-related on one page
+ - add configuration for 800x600 screens
+ - fix gremlin view p wasn't applied at startup
 
 ver 3.4.7.1
  - Remember window size and position when switching back from fullscreen/maximized
