--- a/docs/src/gui/gmoccapy.adoc
+++ b/docs/src/gui/gmoccapy.adoc
@@ -53,7 +53,7 @@ https://lists.sourceforge.net/lists/listinfo/emc-users[LinuxCNC users mailing li
 
 The minimum screen resolution for GMOCCAPY for the normal layout (without side panels) is *980 x 750 Pixel*, so it should fit to every standard screen.
 It is recommended to use screens with minimum resolution of 1024x768.
-There is also a configuration which fits for 800x600 screens (indroduced in GMOCCAPY 3.4.8).
+There is also a configuration which fits for 800x600 screens (introduced in GMOCCAPY 3.4.8).
 
 == How to Get GMOCCAPY
 
