--- a/docs/src/getting-started/hardware-interface.adoc
+++ b/docs/src/getting-started/hardware-interface.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:hardware-interface]]
-= System Requirements(((System Requirements)))
+= Hardware Interface(((Hardware Interface)))
 
 = Hardware to run the LinuxCNC software
 A computer is required to run LinuxCNC itself.
